@@ -35,7 +35,7 @@
 #define SCSOLVER_DEBUG 0
 
 #define REWRITE_FOR_SUN_STUDIO_COMPILER 1
-#define SCSOLVER_UNO_COMPONENT 1
+//#define SCSOLVER_UNO_COMPONENT 1
 
 #if defined(SCSOLVER_UNO_COMPONENT) || defined(SCSOLVER_UNITTEST)
 
