@@ -1,3 +1,12 @@
+2007-12-02  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/solver.hxx: removed using namespace from header.
+	
+	* source/inc/tool/global.hxx: disabled uno extension mode because it 
+	didn't work with ooo-build (works only with upstream).
+	
+	* source/ui/resmgr.cxx: added 'using css::uno::Exception'.
+
 2007-12-01  Kohei Yoshida  <kyoshida@novell.com>
 
 	* ext/description.xml: no registration for default UNO package.
